# Swift-Python-C-OCR-

./: INTEGRATION.md  README.md
cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h
python/: ocr_service.py  requirements.txt
swift/: project.yml
swift/OCRApp/: AppDelegate.swift  DragDropView.swift  HistoryManager.swift  Info.plist  MainViewController.swift  MainWindowController.swift  OCRService.swift  ScreenCaptureWindow.swift
